# docs/swagger/server/swagger.yaml
@@ -62,6 +62,16 @@ definitions:
     x-enum-varnames:
     - RequestInvalidFormat
     - RequestValidationError
+  SecretType:
+    enum:
+    - json
+    - password
+    - string
+    type: string
+    x-enum-varnames:
+    - SecretTypeJSON
+    - SecretTypePassword
+    - SecretTypeString
   TestRequest:
     properties:
       mes:
@@ -72,9 +82,12 @@ definitions:
         maximum: 599
         minimum: 100
         type: integer
+      type:
+        $ref: '#/definitions/SecretType'
     required:
     - message
     - number
+    - type
     type: object
   TestResponse:
     properties:
